capturas de funcionamiento

--- a/Guia07/Autenticacion/app/src/main/res/values/strings.xml
+++ b/Guia07/Autenticacion/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Autenticacion</string>
+    <string name="facebook_app_id">274979160809485</string> <string name="fb_login_protocol_scheme">fb274979160809485</string>
+
 </resources>
